Installation_minikube/namespace-ml/Namespace-ML.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "ml",
    "labels": {
      "name": "ml"
    }
  }
}
