Installation_minikube/namespace-ml/Minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-minio
  namespace: ml
spec:
  selector:
    matchLabels:
      app: ml-minio
  template:
    metadata:
      labels:
        app: ml-minio
    spec:
      volumes:
      - name: minio-pvc
        persistentVolumeClaim:
          claimName: minio-pvc
      containers:
      - name: ml-minio
        image: minio/minio:latest
        args:
        - server
        - /data
        - "--console-address" 
        - ":9001"
        volumeMounts:
        - name: minio-pvc
          mountPath: '/data'
        ports:
        - containerPort: 9000
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: ml
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: ml-minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
  namespace: ml
spec:
  type: NodePort
  ports:
  - port: 9001
    targetPort: 9001
    protocol: TCP
  selector:
    app: ml-minio
